<resources>
    <string name="app_name">BodyMetrics360</string>

    <string name="btn_imc">Índice de Masa Corporal (IMC)</string>
    <string name="btn_ingresoCenso">Censo Comunitario</string>

    <string name="title_male">Hombre</string>
    <string name="title_female">Mujer</string>
    <string name="title_height">Altura</string>
    <string name="title_weight">Peso</string>
    <string name="title_age">Edad</string>
    <string name="title_calculate">Calcular</string>
    <string name="title_recalculate">Re-Calcular</string>
    <string name="title_result">Tu resultado</string>
    <string name="title_welcome">Bienvenido al Formulario</string>
    <string name="title_termsConditions">Termino y Condiciones</string>

    <!-- Titulos -->
    <string name="title_welcomeProject">Proyecto de Censo Comunitario</string>
    <string name="title_nameFormulary">BODYMETRIC360</string>
    <string name="title_selecGender">Selección de Género</string>
    <string name="title_selecCareer">Selecciona tu Carrera</string>
    <string name="title_selecHeight">Selecciona tu Altura</string>
    <string name="title_junkFood">¿Cuánta comida chatarra consumes?</string>
    <string name="title_hoursSleep">¿Cantidad promedio horas de sueño?</string>
    <string name="title_sleepQuality">Selecciona tu Calidad de Sueño</string>
    <string name="title_physicalActivity">¿Cómo es tu Actividad Física?</string>
    <string name="title_sendResults">ENVIAR RESULTADOS</string>
    <string name="title_Edad">EDAD</string>
    <string name="title_Peso">PESO</string>
    <string name="title_Project">Proyecto desarrollado por</string>
    <string name="title_Ingenieria">INGENIERÍA EN INFORMÁTICA</string>
    <string name="title_Ulagos">Ulagos Chiloé 2023</string>

    <string name="error">Error</string>

    <string name="title_underweight">Bajo peso</string>
    <string name="description_underweight">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_normal_weight">Normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_overweight">Sobrepeso</string>
    <string name="description_overweight">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!-- Strings para el formulario -->
    <string name="hint_id">ID</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_description">Descripción</string>
    <string name="text_send">Enviar</string>
    <string name="info_icon_description">Información adicional</string>

    <string-array name="spinner_options">
        <item>Consultar</item>
        <item>Editar</item>
        <item>Eliminar</item>
        <item>Agregar</item>
    </string-array>
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
        <item>Prefiero no decirlo</item>
    </string-array>
    <string-array name="comidachatarra">
        <item>Todos los días</item>
        <item>La mayoría de los días</item>
        <item>Algunos días</item>
        <item>Raramente</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="calidadsueño">
        <item> &#128542; Muy Mala</item>
        <item> &#128528; Mala</item>
        <item> &#128528; Regular</item>
        <item> &#128578; Buena</item>
        <item> &#128512; Excelente</item>
    </string-array>
    <string-array name="nivelactividad">
        <item>Sedentario (poco o ningún ejercicio)</item>
        <item>Ligeramente Activo (deportes de 1 a 3 días a la semana)</item>
        <item>Moderadamente Activo (deportes de 3 a 5 días a la semana)</item>
        <item>Muy Activo (deportes de 6 a 7 días a la semana)</item>
    </string-array>
</resources>