<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:paddingVertical="32dp"
    android:paddingHorizontal="40dp"
    android:background="#673AB7"
    tools:context="com.ulagos.MainActivity">

    <!-- TITULO BIENVENIDA DEL FORMULARIO -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/title_welcome"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/viewMale"
        tools:layout_editor_absoluteX="16dp"
        android:textAlignment="center"/>

    <!-- ICONO DE REFERENCIA PARA EL FORMULARIO -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logoulagos__2_" />

    <!-- BOTÓN DE INGRESO PARA EL FORMULARIO -->
    <Button
        android:id="@+id/btnTmb"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="39dp"
        android:textSize="19sp"
        android:background="@drawable/boton_redondo"
        android:gravity="center"
        android:textStyle="bold"
        app:backgroundTint="#4CAF50"
        android:text="@string/btn_ingresoCenso"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"/>

    <!-- BOTÓN DE INFORMACIÓN SOBRE TERMINO Y CONDICIONES -->
    <Button
        android:id="@+id/btnInformacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/title_termsConditions"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ICONO DE REFERENCIA PARA EL FORMULARIO -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/responsive" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/title_Project"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/title_Ingenieria"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginTop="0dp"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/title_Ulagos"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>