<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".tmb.TmbActivity">

    <!-- Spinner para Seleccionar Acción -->
    <Spinner
        android:id="@+id/spinnerAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText para ID -->
    <EditText
        android:id="@+id/editTextId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/spinnerAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText para Nombre -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintTop_toBottomOf="@id/editTextId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText para Descripción -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:lines="3"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para enviar -->
    <Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/text_send"
        app:layout_constraintTop_toBottomOf="@id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para obtener todos los usuarios -->
    <Button
        android:id="@+id/buttonGetAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Obtener Todos"
        app:layout_constraintTop_toBottomOf="@id/buttonSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView para mostrar los usuarios -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonGetAll"
        app:layout_constraintBottom_toTopOf="@id/buttonPrevious"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de paginación Anterior -->
    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="Anterior"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewUsers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_weight="1" />

    <!-- Botón de paginación Siguiente -->
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="Siguiente"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewUsers"
        app:layout_constraintStart_toEndOf="@id/buttonPrevious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
